--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "react": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1"
@@ -8,7 +9,6 @@
   "name": "client",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "react-scripts start",
